# Vitya_SMM

./: .gitignore  README.md  cleaning_text.py  create_post.py  get_posts.py  main.py  public_post.py  publish_post_ok.py  publish_post_tg.py  publish_post_vk.py  pyproject.toml  requirements.txt  working_with_documents.py
