[project]
name = "vitya-smm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "environs>=14.1.1",
    "google-api-python-client>=2.169.0",
    "gspread>=6.2.0",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "schedule==1.2.2",
]
